fix overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html,
 body {
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
